# Hetero-Mark

src/common/runtime_helper/hsa_runtime_helper/: hsa_agent.h  hsa_signal.cc
src/hsa/: CMakeLists.txt
src/hsa/iir_cl12_hsa/: kernels.h
src/hsa/kmeans_hsa/: kernels.cl  kmeans_benchmark.cc
src/hsa/sw_hsa/: CMakeLists.txt  kernels.h  main.cc  sw_benchmark.cc  sw_benchmark.h  sw_hsa.cc
src/hsa/vec_add_hsa/: CMakeLists.txt  amdhsa001.isa  main.cc  vec_add_benchmark.cc  vec_add_benchmark.h  vec_add_hsa
src/opencl12/aes_cl12/: aes_cl12.cc  main.cc
src/opencl12/kmeans_cl12/: kmeans_cl12.cc  main.cc
src/opencl12/pagerank_cl12/: pagerank_cl12.cc
src/opencl12/sw_cl12/: sw_cl12.cc
src/opencl20/aes_cl20/: main.cc
src/opencl20/fir_cl20/: fir_cl20.cc
src/opencl20/kmeans_cl20/: kmeans_cl20.cc  kmeans_cl20_kernel.cl  main.cc
src/opencl20/pagerank_cl20/: pagerank_cl20.cc
src/opencl20/sw_cl20/: sw_cl20.cc
